--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <div id="header">
       <div class="container">
         <nav>
+           <img
+            src="images/logo1.png"
+            class="logo"
+            width="150px"
+            height="60px"
+          />
          
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
