--- a/index.html
+++ b/index.html
@@ -48,12 +48,7 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas
-              porttitor congue massa netus et malesuada fames ac turpis egestas.
-              Proin pharetra nonummy pede. Mauris et orci. Aenean nec lorem. In
-              porttitor. Donec laoreet nonummy augue. Suspendisse dui purus,
-              scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget
-              neque at sem venenatis eleifend. Ut nonummy.
+              Collaborative engineer with a passion for problem solving and innovative brainstorming. Enthusiastic about crafting solutions and contributing to a team environment.
             </p>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">
@@ -67,16 +62,16 @@
             <div class="tab-contents active-tab" id="skills">
               <ul>
                 <li>
-                  <span>Web Development</span><br />Designing Web Interfaces
+                  <span>Web Development</span><br />Designing and creating Web Interfaces
                 </li>
                 <li>
                   <span>Video Editing</span><br />Editing Videos for Short
                   Movies and Instagram Reels
                 </li>
-                <li>
+<!--                 <li>
                   <span>App Development</span><br />Developing Android and IOS
                   APPs
-                </li>
+                </li> -->
               </ul>
             </div>
 
@@ -91,14 +86,14 @@
                   Chaitanya College
                 </li>
                 <li>
-                  <span>2019</span><br />Completed My Schooling at ST.Joseph
+                  <span>2019</span><br />Completed My Schooling at St.Joseph
                   High School
                 </li>
               </ul>
             </div>
 
             <div class="tab-contents" id="Experience">
-              <ul>
+<!--               <ul>
                 <li><span>2022-</span><br />intern at Google</li>
                 <li>
                   <span>2021-2022</span><br />Sadly did nothing due to Covid-19
@@ -106,7 +101,7 @@
                 <li>
                   <span>2019-2021</span><br />Was Enjoying my College life
                 </li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </div>
@@ -120,28 +115,28 @@
           <div>
             <i class="fa-solid fa-code"></i>
             <h2>Web Development</h2>
-            <p>
+<!--             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas
               ac turpis egestas.
-            </p>
+            </p> -->
             <a href="#">Learn more</a>
           </div>
           <div>
             <i class="fa-solid fa-video"></i>
             <h2>Video <br />Editing</h2>
-            <p>
+<!--             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas
               ac turpis egestas.
-            </p>
+            </p> -->
             <a href="#">Learn more</a>
           </div>
           <div>
             <i class="fa-brands fa-app-store-ios"></i>
             <h2>APP Development</h2>
-            <p>
+<!--             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas
               ac turpis egestas.
-            </p>
+            </p> -->
             <a href="#">Learn more</a>
           </div>
         </div>
@@ -155,10 +150,9 @@
           <div class="work">
             <img src="images/work1.ong.jpg" width="410px" height="450px" />
             <div class="layer">
-              <h3>My Ecommerce Website</h3>
+              <h3>Real time chat application</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                Maecenas ac turpis egestas.
+                Real-time chat application leveraging React for the front-end interface and Socket.IO for seamless, bidirectional user communication.
               </p>
               <a href=""
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
@@ -169,10 +163,10 @@
             <img src="images/work2.png" width="410px" height="450px" />
             <div class="layer">
               <h3>My Video Editing Page</h3>
-              <p>
+<!--               <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                 Maecenas ac turpis egestas.
-              </p>
+              </p> -->
               <a href=""
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
@@ -182,10 +176,10 @@
             <img src="images/work3.png" width="410px" height="450px" />
             <div class="layer">
               <h3>APPs Developed By Me</h3>
-              <p>
+<!--               <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                 Maecenas ac turpis egestas.
-              </p>
+              </p> -->
               <a href=""
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
